quiz dynamically generated and progress buttons updatedgit add .

--- a/sections/main-quiz.liquid
+++ b/sections/main-quiz.liquid
@@ -1,7 +1,7 @@
 {{ 'section-quiz.css' | asset_url | stylesheet_tag }}
 <script src="{{ 'quiz.js' | asset_url }}" defer="defer"></script>
   
-<!--
+
 <script>
   const questions = [
     {
@@ -32,13 +32,13 @@
     }
   ];
 </script>
--->
+
 
 <div class="quiz page-width">
 
   <form id="quizForm">
 
-    <h2>1) What are you looking for?</h2>
+    {% comment %} <h2>1) What are you looking for?</h2>
     <div class="label-container">
       <input type="radio" id="bike" name="product_type" value="bike">
       <label for="bike">
@@ -104,15 +104,15 @@
         </div>
         <span>Red</span>
       </label>
-    </div>
+    </div> {% endcomment %}
 
   </form>
   <div id="nav-buttons">
-    <!--
+    
     <button id="prev-button" class="button previous-btn">← Previous</button>
     <button id="next-button" class="button next-btn">Next →</button>
-    -->
-    <button id="finish-button" class="button next-btn">Submit</button>
+    
+    <button id="finish-button" class="button next-btn" style="display:none">Submit</button>
   </div>
  
 </div>
