--- a/sections/main-product-meta-information.liquid
+++ b/sections/main-product-meta-information.liquid
@@ -850,7 +850,7 @@
 
 <script>
 const variantMetaData = JSON.parse(document.querySelector('#variant_meta_information').innerHTML);
-console.log("parsed variantMetaData", variantMetaData)
+// console.log("parsed variantMetaData", variantMetaData)
 
 const weightTxt = document.querySelector('#meta-information-weight');
 const rangeTxt = document.querySelector('#meta-information-range');
@@ -859,7 +859,11 @@ const batteryTxt = document.querySelector('#meta-information-battery');
 const breaksTxt = document.querySelector('#meta-information-breaks');
 
 function updateUI(variantOption){
-
+    weightTxt.textContent = variantMetaData[variantOption].weight
+    rangeTxt.textContent = variantMetaData[variantOption].range
+    speedTxt.textContent = variantMetaData[variantOption].speed
+    batteryTxt.textContent = variantMetaData[variantOption].battery
+    breaksTxt.textContent = variantMetaData[variantOption].breaks
 }
 
 
@@ -869,6 +873,10 @@ updateUI(initialVariantOption);
 
 //subscribe to variant changes and update UI based on new selection
 
+const variantChangEvent = document.addEventListener("afterVariantChange", event => {
+  // console.log(event.detail.option1)
+  updateUI(event.detail.newVariant.option1)
+})
 
 </script>
 
